feat: 完善新增和删除逻辑

--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -72,7 +72,12 @@
     "normal": "normal",
     "birthday": "birthday",
     "address": "address",
-    "remark": "remark"
+    "remark": "remark",
+    "normalUser": "normal user",
+    "vipUser": "VIP user",
+    "adminUser": "admin user",
+    "man": "man",
+    "woman": "woman"
   },
   "dict": {
     "code": "dictionary code",
