--- a/packages/locales/src/langs/zh-CN/authentication.json
+++ b/packages/locales/src/langs/zh-CN/authentication.json
@@ -1,10 +1,10 @@
 {
   "welcomeBack": "欢迎回来",
   "pageTitle": "星萤智慧物业后台管理系统",
-  "pageDesc": "服务于写字楼、公寓、办公场景、智能家居等的智慧化管理系统",
+  "pageDesc": "服务于写字楼、公寓、小区等场景的智慧化管理系统",
   "loginSuccess": "登录成功",
   "loginSuccessDesc": "欢迎回来",
-  "loginSubtitle": "请输入您的帐户信息以开始管理您的项目",
+  "loginSubtitle": "请输入您的帐户信息以登录系统",
   "selectAccount": "快速选择账号",
   "username": "账号",
   "password": "密码",
@@ -36,7 +36,7 @@
   "qrcodeSubtitle": "请用手机扫描二维码登录",
   "qrcodePrompt": "扫码后点击 '确认'，即可完成登录",
   "qrcodeLogin": "扫码登录",
-  "codeSubtitle": "请输入您的手机号码以开始管理您的项目",
+  "codeSubtitle": "请输入您的手机号码以登录系统",
   "code": "验证码",
   "codeTip": "请输入{0}位验证码",
   "mobile": "手机号码",
