--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -26,7 +26,8 @@
     "confirmPreview": "confirm preview?",
     "confirmSetting": "confirm setting?",
     "confirmDeleteSelected": "confirm delete?",
-    "cancelConfirm": "cancel confirm"
+    "cancelConfirm": "cancel confirm",
+    "searchError": "search error"
   },
   "btn": {
     "add": "add",
@@ -56,7 +57,8 @@
     "collapseMore": "collapse",
     "detail": "detail",
     "devideUser": "devide user",
-    "devideAuth": "devide auth"
+    "devideAuth": "devide auth",
+    "addDictItem": "add dict item"
   },
   "user": {
     "userName": "account",
