--- a/apps/web-ele/src/locales/langs/zh-CN/global.json
+++ b/apps/web-ele/src/locales/langs/zh-CN/global.json
@@ -26,7 +26,8 @@
     "confirmPreview": "确认预览？",
     "confirmSetting": "确认设置？",
     "confirmDeleteSelected": "确认删除选中项？",
-    "cancelConfirm": "已取消操作"
+    "cancelConfirm": "已取消操作",
+    "searchError": "查询数据失败"
   },
   "btn": {
     "add": "添加",
@@ -56,7 +57,8 @@
     "collapseMore": "收起更多功能",
     "detail": "详情",
     "devideUser": "分配用户",
-    "devideAuth": "分配权限"
+    "devideAuth": "分配权限",
+    "addDictItem": "添加字典项"
   },
   "user": {
     "userName": "用户号",
