--- a/packages/locales/src/langs/en-US/authentication.json
+++ b/packages/locales/src/langs/en-US/authentication.json
@@ -1,5 +1,5 @@
 {
-  "welcomeBack": "Welcome Back",
+  "welcomeBack": "Welcome Visit",
   "pageTitle": "XingYing Smart Property Management Backend System",
   "pageDesc": "serving office buildings, apartments, office scenarios, smart homes, etc.",
   "loginSuccess": "Login Successful",
