--- a/packages/locales/src/langs/zh-CN/authentication.json
+++ b/packages/locales/src/langs/zh-CN/authentication.json
@@ -1,5 +1,5 @@
 {
-  "welcomeBack": "欢迎回来",
+  "welcomeBack": "欢迎访问",
   "pageTitle": "星萤智慧物业管理系统",
   "pageDesc": "服务于写字楼、公寓、小区等场景的智慧化管理系统",
   "loginSuccess": "登录成功",
