perf: 完善根据用户获取角色列表接口

--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -34,7 +34,8 @@
     "cancelConfirm": "cancel confirm",
     "searchError": "search error",
     "noPermission": "no permission",
-    "getMenuError": "get menu error"
+    "getMenuError": "get menu error",
+    "getUserInfoErr": "get user info error"
   },
   "btn": {
     "add": "add",
