feat: 完善系统按钮图标

--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -67,7 +67,8 @@
     "devideUser": "devide user",
     "devideAuth": "devide auth",
     "addDictItem": "add dict item",
-    "linkTo": "link to"
+    "linkTo": "link to",
+    "refresh": "fresh"
   },
   "user": {
     "userName": "account",
@@ -113,6 +114,7 @@
     "package": "package",
     "munu": "munu",
     "button": "button",
-    "componentPath": "component path"
+    "componentPath": "component path",
+    "copyIcon": "choose icon"
   }
 }
