feat: 完善商户管理接口对接

--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -129,6 +129,17 @@
     "storeManager": "Manager",
     "identityFont": "Front ID Card",
     "identityBack": "Back ID Card",
-    "lawName": "Business Entity Name"
+    "lawName": "Business Entity Name",
+    "forever": "forever",
+    "rent": "rent",
+    "normal": "normal",
+    "lock": "lock",
+    "bussinessOwner": "bussiness owner",
+    "bussinessName": "bussiness name",
+    "idCardNo": "id card no",
+    "expirationTime": "expiration time",
+    "businessLicense": "Business License",
+    "remark": "remark",
+    "idCard": "idCard"
   }
 }
