--- a/apps/web-ele/src/locales/langs/zh-CN/global.json
+++ b/apps/web-ele/src/locales/langs/zh-CN/global.json
@@ -119,16 +119,27 @@
   },
   "store": {
     "storeName": "商户名称",
-    "storeCode": "商户编码",
-    "storeType": "商户类型",
-    "storeStatus": "商户状态",
+    "storeCode": "编码",
+    "storeType": "类型",
+    "storeStatus": "状态",
     "storeDesc": "商户描述",
-    "storeAddress": "商户地址",
-    "storePhone": "商户电话",
+    "storeAddress": "地址",
+    "storePhone": "联系方式",
     "storeEmail": "商户邮箱",
     "storeManager": "负责人",
     "identityFont": "身份证正面",
     "identityBack": "身份证反面",
-    "lawName": "营业执照名称"
+    "lawName": "营业执照名称",
+    "forever": "永久",
+    "rent": "租用",
+    "normal": "正常",
+    "lock": "冻结",
+    "businessOwner": "法人",
+    "businessName": "工商主体名",
+    "idCardNo": "身份证号",
+    "expirationTime": "到期时间",
+    "businessLicense": "营业执照",
+    "remark": "备注",
+    "idCard": "身份证"
   }
 }
