feat: 新增图片上传逻辑

--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -13,6 +13,14 @@
   "allPeople": "all people",
   "choicePeople": "choice people",
   "devideAuth": "devide auth",
+  "file": {
+    "limitSize": "file size should not exceed",
+    "limitNum": "file number should not exceed",
+    "uploadError": "upload error",
+    "uploadSuccess": "upload success",
+    "uploading": "uploading",
+    "onlyImage": "only image"
+  },
   "home": {
     "title": "​Corporate Site",
     "logo": "company logo"
