feat: 新增区域配置管理

--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -69,6 +69,7 @@
     "exitfullscreen": "exitfullscreen",
     "lock": "lock",
     "unlock": "unlock",
+    "normal": "normal",
     "expand": "expand",
     "collapse": "collapse",
     "expandMore": "expand more",
@@ -151,5 +152,13 @@
     "businessLicense": "Business License",
     "remark": "remark",
     "idCard": "idCard"
+  },
+  "area": {
+    "areaName": "area name",
+    "areaCode": "code",
+    "areaStatus": "status",
+    "remark": "remark",
+    "areaPhoto": "aream photo",
+    "useCompany": "using store"
   }
 }
