feat: 新增合同项字段

--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -181,6 +181,13 @@
     "unsigned": "unsigned",
     "signed": "signed",
     "expired": "expired",
-    "finished": "finished"
+    "finished": "finished",
+    "itemName": "item name",
+    "itemType": "item type",
+    "quantity": "quantity",
+    "unitPrice": "unit price",
+    "specification": "specification",
+    "totalPrice": "total price",
+    "addContractItem": "add contract item"
   }
 }
