--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -127,7 +127,8 @@
     "munu": "munu",
     "button": "button",
     "componentPath": "component path",
-    "copyIcon": "choose icon"
+    "copyIcon": "choose icon",
+    "isShow": "is show"
   },
   "store": {
     "storeName": "Store Name",
