--- a/apps/web-ele/src/locales/langs/zh-CN/global.json
+++ b/apps/web-ele/src/locales/langs/zh-CN/global.json
@@ -49,7 +49,13 @@
     "getMenuError": "获取菜单失败",
     "getUserInfoErr": "获取用户信息失败",
     "onlyOneUser": "只能选择一个用户",
-    "pleaseSaveContractFirst": "请先保存合同基础信息"
+    "pleaseSaveContractFirst": "请先保存合同基础信息",
+    "pleaseEnterItemName": "请先完善合同项名称",
+    "pleaseEnterItemNumber": "请先完善合同项数量",
+    "pleaseEnterItemUnitPrice": "请先完善合同项单价",
+    "pleaseEnterItemTotalPrice": "请先完善合同项总价",
+    "contractItemIsNull": "合同项为空",
+    "saveSuccess": "保存成功"
   },
   "btnModule": "********************按钮相关********************",
   "btn": {
