perf: 完善合同细则弹窗对合同项的编辑

--- a/apps/web-ele/src/locales/langs/en-US/global.json
+++ b/apps/web-ele/src/locales/langs/en-US/global.json
@@ -52,7 +52,8 @@
     "pleaseEnterItemUnitPrice": "please enter unit price",
     "pleaseEnterItemTotalPrice": "please enter total price",
     "contractItemIsNull": "contract item is null",
-    "saveSuccess": "save success"
+    "saveSuccess": "save success",
+    "getContractItemFail": "get contract item fail"
   },
   "btn": {
     "add": "add",
